# DirectX_Lab

./: .gitignore  AppRunner.cpp  AppRunner.h  CMakeLists.txt  ControlSettings.h  CubeMesh.cpp  CubeMesh.h  Delegates.h  Exports.h  Framework.cpp  Framework.h  GBuffer.cpp  GBuffer.h  GameController.h  InputDevice.cpp  InputDevice.h  KeyInputManager.cpp  KeyInputManager.h  Keys.h  MaterialConfigurator.cpp  MaterialConfigurator.h  MeshData.h  MeshLoader.cpp  MeshLoader.h  PlaneMesh.cpp  PlaneMesh.h  README.md  RenderingSystem.cpp  RenderingSystem.h  SceneConfig.cpp  SceneConfig.h  SceneLighting.cpp  SceneLighting.h  TextureResolver.cpp  TextureResolver.h  Timer.cpp  Timer.h  Window.cpp  Window.h  main.cpp
bricks/: Bricks047_1K-JPG.mtlx  Bricks047_1K-JPG.tres
framework/: Constants.h  DeviceManager.cpp  DeviceManager.h  Exports.h  Framework.Frame.cpp  Framework.Init.cpp  Framework.Pipeline.cpp  Framework.Render.cpp  Framework.Resources.cpp  Framework.cpp  Framework.h  FrameworkInternal.h  FrameworkTypes.h  InputDevice.cpp  InputDevice.h  Scene.cpp  Scene.h  TextureLoader.cpp  Timer.h
shaders/: DeferredLighting.hlsl  DomainShader.hlsl  GBufferDebug.hlsl  GBufferNormalMapping.hlsl  GBufferPixel.hlsl  GBufferTessDomain.hlsl  GBufferTessHull.hlsl  GBufferVertex.hlsl  HullShader.hlsl  PixelShader.hlsl  TessellationCommon.hlsl  VertexShader.hlsl
